tests/snapshots/rune_pit_integration__rune_arraylist_docs_example_stderr.snap
---
source: tests/rune_pit_integration.rs
expression: stderr
---
┌──────────────────────────┬──────┬────────────┐
│         Check javadoc for ArrayList          │
├──────────────────────────┼──────┼────────────┤
│ File                     │ Line │ Message    │
├──────────────────────────┼──────┼────────────┤
│ ./src/DataStructures/Arr │ 15   │ no comment │
│ ayList.java              │      │            │
├──────────────────────────┼──────┼────────────┤
│ ./src/DataStructures/Arr │ 16   │ no comment │
│ ayList.java              │      │            │
├──────────────────────────┼──────┼────────────┤
│ ./src/DataStructures/Arr │ 17   │ no comment │
│ ayList.java              │      │            │
├──────────────────────────┼──────┼────────────┤
│ ./src/DataStructures/Arr │ 20   │ no comment │
│ ayList.java              │      │            │
├──────────────────────────┼──────┼────────────┤
│ ./src/DataStructures/Arr │ 116  │ no comment │
│ ayList.java              │      │            │
├──────────────────────────┼──────┼────────────┤
│              -15 due to 5 nits               │
└──────────────────────────┴──────┴────────────┘
┌─────────────┬───────────┬────────────┐
│           Grading Overview           │
├─────────────┼───────────┼────────────┤
│ Requirement │ Grade     │ Reason     │
├─────────────┼───────────┼────────────┤
│ docs        │ 0.00/5.00 │ See above. │
├─────────────┼───────────┼────────────┤
│           Total: 0.00/5.00           │
└─────────────┴───────────┴────────────┘
